rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_add_fixed_multiple_points.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [var 1.999999999, var 2.999999999])
  point2 = point(at = [var 3.999999999, var 4.999999999])
  fixed([point1, [2mm, 3mm]])
  fixed([point2, [4mm, 5mm]])
}
