rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_add_fixed_owned_point.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(start = [var 1.999999999, var 2.999999999], end = [var 3, var 4])
  fixed([line1.start, [2mm, 3mm]])
}
