rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_add_fixed_standalone_point.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [var 1.999999999, var 2.999999999])
  fixed([point1, [2mm, 3mm]])
}
