rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_add_line_when_sketch_block_uses_variable.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
s = sketch(on = XY) {
  line(start = [0mm, 0mm], end = [10mm, 10mm])
}

