rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_coincident_of_line_end_points.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(start = [var 1, var 2], end = [var 3.999999999, var 4.999999999])
  line2 = line(start = [var 4, var 5], end = [var 7, var 8])
  coincident([line1.end, line2.start])
}
