rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_commit_var_solution_by_node_path_updates_sketch_var.snap
---
source: kcl-lib/src/frontend.rs
expression: "source_delta.text"
---
sketch(on = XY) {
  line1 = line(start = [var 0, var 0], end = [var 25mm, var 0])
}

