rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_commit_var_solution_node_path_wins_when_source_range_points_at_wrong_var.snap
---
source: kcl-lib/src/frontend.rs
expression: "source_delta.text"
---
sketch(on = XY) {
  line1 = line(start = [var 33mm, var 0mm], end = [var 20mm, var 0mm])
}

