rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_commit_var_solution_survives_whitespace_shift_earlier_in_file.snap
---
source: kcl-lib/src/frontend.rs
expression: "source_delta.text"
---
// added comment
// added comment

sketch(on = XY) {
  line1 = line(start = [var 0, var 0], end = [var 30mm, var 0])
}

