rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_commit_var_solution_writes_back_into_bare_var.snap
---
source: kcl-lib/src/frontend.rs
expression: "source_delta.text"
---
@settings(experimentalFeatures = allow, kclVersion = 2.0)

sketch(on = XY) {
  line1 = line(start = [var 7mm, var 0mm], end = [var 10mm, var 0])
}

