rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_delete_circle.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
}

